# Headroom

./: .gitignore  Cargo.toml  ENTERPRISE.md  README.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml  install-native-e2e.yml  pr-health.yml  wrap-native-e2e.yml
crates/headroom-core/: Cargo.toml
crates/headroom-ffi/: Cargo.toml
crates/headroom-ffi/src/: hooks.rs  lib.rs  marker.rs  state.rs
crates/headroom-proxy/: Cargo.toml
docker/differential-network-capture/: run-claude-lane.sh
docs/: package-lock.json
e2e/: docker-native-install.sh
e2e/_lib/: make_shim.sh
examples/: 07-context-compression.ipynb  recommendations.md
examples/hermes_demo/: README.md  __init__.py  hermes_agent_eval.py  hermes_bundle_demo.py  hermes_mcp_client.py  hermes_via_proxy_demo.py  test_hermes_ccr.py
headroom/ccr/: context_tracker.py  mcp_server.py
headroom/cli/: wrap.py
headroom/integrations/: __init__.py
headroom/providers/: proxy_routes.py
headroom/proxy/: forwarded_headers.py  image_compression_decision.py  loopback_guard.py  models.py  rate_limiter.py  savings_tracker.py  server.py
headroom/tokenizers/: huggingface.py
headroom/transforms/: content_router.py
plugins/headroom-oauth2/: pyproject.toml
plugins/openclaw/: package.json
scripts/: build_rust_extension.sh  install-git-hooks.sh  install.sh  validate-workflows.sh
sql/: create_proxy_telemetry_v2.sql  upgrade_telemetry_cache_bust.sql  upgrade_telemetry_stack_context.sql
tests/: test_codex_ws_compression_scheduler.py  test_provider_proxy_routes.py
wiki/: LATENCY_BENCHMARKS.md
(+91 files in other folders)
